--- a/EggTimer/app/src/main/AndroidManifest.xml
+++ b/EggTimer/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@drawable/egg"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
